Update Maven Compiler version to 3.1

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
                     <source>9</source>
                     <target>9</target>
                 </configuration>
+                <version>3.1</version>
             </plugin>
         </plugins>
     </build>
