--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: java
 before_install:
   - mvn validate
+
+jobs:
+  include:
+    - stage: "Tests"
+      name: "Unit Tests"
+      script: ./test
