Change Main, and add automatic deployment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ jobs:
     - stage: "Tests"
       name: "Unit Tests"
       script: mvn test
+    - stage: "Deploy"
+      name: "Deploy Maven repo"
+      script: mvn deploy
