--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
                 <configuration>
                     <source>9</source>
                     <target>9</target>
+                    <compilerArgument>-parameters</compilerArgument>
                 </configuration>
                 <version>3.1</version>
             </plugin>
