--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                     <target>9</target>
                     <compilerArgument>-parameters</compilerArgument>
                 </configuration>
-                <version>3.1</version>
+                <version>3.8.1</version>
             </plugin>
         </plugins>
     </build>
@@ -70,14 +70,12 @@
         </dependency>
     </dependencies>
 
+
     <repositories>
-
         <repository>
-            <id>project.mymavenrepository</id>
-            <name>mymavenrepository</name>
-            <url>https://mymavenrepo.com/repo/hMt8ClBV8kQ64QtGXSYF/</url>
+            <id>myMavenRepo</id>
+            <url>file://${project.basedir}/lib</url>
         </repository>
-
     </repositories>
 
     <distributionManagement>
